moved to new slides framework, removed old examples